# CRTSolver-Report-Pipeline

./: README.md  pyproject.toml  todo.txt
output/: combined_results.csv  latex_table.txt
results/: results_CRTSolver (Bit-Vector Mode).csv  results_CRTSolver (Integer Mode).csv  results_Z3.csv  results_cvc5.csv
src/crtsolver_report_pipeline/: comparative_analysis.ipynb  csv_combiner.py  latex_creator.py
